auto publishing updates to notebooks

--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b0862b7b",
+   "id": "d3882a9f",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5ae4190",
+   "id": "0fc97193",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d944acc9",
+   "id": "af29ca30",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab8cd829",
+   "id": "8c31cfec",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "726ef1b7",
+   "id": "32bb46c5",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f208d69",
+   "id": "003c701e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaf3f946",
+   "id": "67f052da",
    "metadata": {
     "hide-output": false
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4cc8e5f",
+   "id": "98e517d6",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32d322d2",
+   "id": "5f1dd9e6",
    "metadata": {
     "hide-output": false
    },
@@ -138,47 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e488c57",
-   "metadata": {},
-   "source": [
-    "We need the following successive approximation function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a1b11f8",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "def successive_approx(T,                     # Operator (callable)\n",
-    "                      x_0,                   # Initial condition\n",
-    "                      tolerance=1e-6,        # Error tolerance\n",
-    "                      max_iter=10_000,       # Max iteration bound\n",
-    "                      print_step=25,         # Print at multiples\n",
-    "                      verbose=False):\n",
-    "    x = x_0\n",
-    "    error = tolerance + 1\n",
-    "    k = 1\n",
-    "    while error > tolerance and k <= max_iter:\n",
-    "        x_new = T(x)\n",
-    "        error = jnp.max(jnp.abs(x_new - x))\n",
-    "        if verbose and k % print_step == 0:\n",
-    "            print(f\"Completed iteration {k} with error {error}.\")\n",
-    "        x = x_new\n",
-    "        k += 1\n",
-    "    if error > tolerance:\n",
-    "        print(f\"Warning: Iteration hit upper bound {max_iter}.\")\n",
-    "    elif verbose:\n",
-    "        print(f\"Terminated successfully in {k} iterations.\")\n",
-    "    return x"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4f120296",
+   "id": "b20f3de6",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -187,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8820c8b3",
+   "id": "ae0ef8b5",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4683224",
+   "id": "0c886fad",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -237,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bda7642",
+   "id": "862ef807",
    "metadata": {
     "hide-output": false
    },
@@ -274,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66209989",
+   "id": "413856d8",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -288,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3524bdeb",
+   "id": "1dd06975",
    "metadata": {
     "hide-output": false
    },
@@ -320,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7331856",
+   "id": "d0fdbae8",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -329,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37611ca3",
+   "id": "c0b476f3",
    "metadata": {
     "hide-output": false
    },
@@ -344,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "365a64e5",
+   "id": "ee0059a1",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -353,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dbc98b7",
+   "id": "640ebe19",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ede564a",
+   "id": "7173b48a",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -377,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9258ec9",
+   "id": "74e39271",
    "metadata": {
     "hide-output": false
    },
@@ -412,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15615886",
+   "id": "df118ae7",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -451,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55d4847e",
+   "id": "98226bd4",
    "metadata": {
     "hide-output": false
    },
@@ -480,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a7bac4f",
+   "id": "e47a0024",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -489,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d479088",
+   "id": "5184c658",
    "metadata": {
     "hide-output": false
    },
@@ -514,7 +474,47 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db1df99d",
+   "id": "099db5c5",
+   "metadata": {},
+   "source": [
+    "We use successive approximation for VFI."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "114cb01c",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "def successive_approx_jax(x_0,                   # Initial condition\n",
+    "                          constants,\n",
+    "                          sizes,\n",
+    "                          arrays,                 \n",
+    "                          tolerance=1e-6,        # Error tolerance\n",
+    "                          max_iter=10_000):      # Max iteration bound\n",
+    "\n",
+    "    def body_fun(k_x_err):\n",
+    "        k, x, error = k_x_err\n",
+    "        x_new = T(x, constants, sizes, arrays)\n",
+    "        error = jnp.max(jnp.abs(x_new - x))\n",
+    "        return k + 1, x_new, error\n",
+    "\n",
+    "    def cond_fun(k_x_err):\n",
+    "        k, x, error = k_x_err\n",
+    "        return jnp.logical_and(error > tolerance, k < max_iter)\n",
+    "\n",
+    "    k, x, error = jax.lax.while_loop(cond_fun, body_fun, (1, x_0, tolerance + 1))\n",
+    "    return x\n",
+    "\n",
+    "successive_approx_jax = jax.jit(successive_approx_jax, static_argnums=(2,))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6f6cf42",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "873512c7",
+   "id": "4ad55841",
    "metadata": {
     "hide-output": false
    },
@@ -533,17 +533,16 @@
     "\n",
     "def value_iteration(model, tol=1e-5):\n",
     "    constants, sizes, arrays = model\n",
-    "    _T = lambda v: T(v, constants, sizes, arrays)\n",
     "    vz = jnp.zeros(sizes)\n",
     "\n",
-    "    v_star = successive_approx(_T, vz, tolerance=tol)\n",
+    "    v_star = successive_approx_jax(vz, constants, sizes, arrays, tolerance=tol)\n",
     "    return get_greedy(v_star, constants, sizes, arrays)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14f15119",
+   "id": "ca2d6458",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "460169e1",
+   "id": "e1a9e82e",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9585d54c",
+   "id": "055fb59e",
    "metadata": {
     "hide-output": false
    },
@@ -610,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "228602fa",
+   "id": "7bd23907",
    "metadata": {
     "hide-output": false
    },
@@ -627,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68ccb08b",
+   "id": "df3671a8",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "175ea9a5",
+   "id": "f41acf71",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -652,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eca05bd5",
+   "id": "8ce7ac88",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9757fcf",
+   "id": "e33778fb",
    "metadata": {
     "hide-output": false
    },
@@ -686,7 +685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c48e8302",
+   "id": "a8e9dd29",
    "metadata": {},
    "source": [
     "Let’s plot the time taken by each of the solvers and compare them."
@@ -695,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc6eeafa",
+   "id": "41d2aa96",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91888e27",
+   "id": "9c195ecf",
    "metadata": {
     "hide-output": false
    },
@@ -723,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c2fab6b",
+   "id": "061c124c",
    "metadata": {
     "hide-output": false
    },
@@ -740,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "782ac016",
+   "id": "251d8be2",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9ce1acd",
+   "id": "d6ab5eeb",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +778,7 @@
   }
  ],
  "metadata": {
-  "date": 1703121772.886431,
+  "date": 1709332851.8069541,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
