--- a/opt_savings.ipynb
+++ b/opt_savings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c56f03d6",
+   "id": "5d48c593",
    "metadata": {},
    "source": [
     "# Optimal Savings"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e8a63ef",
+   "id": "cd04b892",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c578e959",
+   "id": "a8a08dc8",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70363d8f",
+   "id": "9717cc71",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "316dedb7",
+   "id": "3519f179",
    "metadata": {
     "hide-output": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1be6fda",
+   "id": "39b679df",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd6e6329",
+   "id": "098966a6",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b45ae83",
+   "id": "ff40deb4",
    "metadata": {},
    "source": [
     "Use 64 bit floats with JAX in order to match NumPy code\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dfd0ee1",
+   "id": "28b6a3b7",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "496ab5eb",
+   "id": "4cf0d4a2",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -129,46 +129,12 @@
     "\n",
     "$$\n",
     "u(c) = \\frac{c^{1-\\gamma}}{1-\\gamma}\n",
-    "$$\n",
-    "\n",
-    "We use successive approximation for VFI."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b8322c9",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "def successive_approx(T,                     # Operator (callable)\n",
-    "                      x_0,                   # Initial condition\n",
-    "                      tolerance=1e-6,        # Error tolerance\n",
-    "                      max_iter=10_000,       # Max iteration bound\n",
-    "                      print_step=25,         # Print at multiples\n",
-    "                      verbose=False):\n",
-    "    x = x_0\n",
-    "    error = tolerance + 1\n",
-    "    k = 1\n",
-    "    while error > tolerance and k <= max_iter:\n",
-    "        x_new = T(x)\n",
-    "        error = jnp.max(jnp.abs(x_new - x))\n",
-    "        if verbose and k % print_step == 0:\n",
-    "            print(f\"Completed iteration {k} with error {error}.\")\n",
-    "        x = x_new\n",
-    "        k += 1\n",
-    "    if error > tolerance:\n",
-    "        print(f\"Warning: Iteration hit upper bound {max_iter}.\")\n",
-    "    elif verbose:\n",
-    "        print(f\"Terminated successfully in {k} iterations.\")\n",
-    "    return x"
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9463fe63",
+   "id": "a5a2f84d",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -179,13 +145,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eaf80ac",
+   "id": "48b80381",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "def create_consumption_model(R=1.01,                # Gross interest rate\n",
+    "def create_consumption_model(R=1.01,                    # Gross interest rate\n",
     "                             β=0.98,                    # Discount factor\n",
     "                             γ=2,                       # CRRA parameter\n",
     "                             w_min=0.01,                # Min wealth\n",
@@ -207,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc3cf7c9",
+   "id": "7e6b603f",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -216,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14f08774",
+   "id": "b8bcdbda",
    "metadata": {
     "hide-output": false
    },
@@ -254,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4db11e3",
+   "id": "ffe4cbb3",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -270,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7ac31bd",
+   "id": "87be7b68",
    "metadata": {
     "hide-output": false
    },
@@ -299,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f46afabe",
+   "id": "c2b5f77f",
    "metadata": {},
    "source": [
     "Now we define the policy operator $ T_\\sigma $"
@@ -308,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22142fd9",
+   "id": "9a47f006",
    "metadata": {
     "hide-output": false
    },
@@ -334,14 +300,14 @@
     "    Q = jnp.reshape(Q, (1, y_size, y_size))\n",
     "\n",
     "    # Calculate the expected sum Σ_jp v[σ[i, j], jp] * Q[i, j, jp]\n",
-    "    Ev = jnp.sum(V * Q, axis=2)\n",
+    "    EV = jnp.sum(V * Q, axis=2)\n",
     "\n",
-    "    return r_σ + β * Ev"
+    "    return r_σ + β * EV"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "096f3489",
+   "id": "e3964cf5",
    "metadata": {},
    "source": [
     "and the Bellman operator $ T $"
@@ -350,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7a33ab4",
+   "id": "6920ad50",
    "metadata": {
     "hide-output": false
    },
@@ -363,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16fe2ad8",
+   "id": "db4c42a8",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -372,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d5eae54",
+   "id": "9a0c22cd",
    "metadata": {
     "hide-output": false
    },
@@ -385,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "342df4c8",
+   "id": "e5c988f9",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -424,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ab7ddfb",
+   "id": "377d1fad",
    "metadata": {
     "hide-output": false
    },
@@ -457,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88a7e5e3",
+   "id": "8a0f0af7",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -466,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4aee955a",
+   "id": "e6ab252d",
    "metadata": {
     "hide-output": false
    },
@@ -490,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6ad97b8",
+   "id": "35578485",
    "metadata": {},
    "source": [
     "## JIT compiled versions"
@@ -499,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99bc5a20",
+   "id": "d23d1423",
    "metadata": {
     "hide-output": false
    },
@@ -516,7 +482,47 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddd916cf",
+   "id": "89f3da6a",
+   "metadata": {},
+   "source": [
+    "We use successive approximation for VFI."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "048e8f80",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "def successive_approx_jax(x_0,                   # Initial condition\n",
+    "                          constants,\n",
+    "                          sizes,\n",
+    "                          arrays,                 \n",
+    "                          tolerance=1e-6,        # Error tolerance\n",
+    "                          max_iter=10_000):      # Max iteration bound\n",
+    "\n",
+    "    def body_fun(k_x_err):\n",
+    "        k, x, error = k_x_err\n",
+    "        x_new = T(x, constants, sizes, arrays)\n",
+    "        error = jnp.max(jnp.abs(x_new - x))\n",
+    "        return k + 1, x_new, error\n",
+    "\n",
+    "    def cond_fun(k_x_err):\n",
+    "        k, x, error = k_x_err\n",
+    "        return jnp.logical_and(error > tolerance, k < max_iter)\n",
+    "\n",
+    "    k, x, error = jax.lax.while_loop(cond_fun, body_fun, (1, x_0, tolerance + 1))\n",
+    "    return x\n",
+    "\n",
+    "successive_approx_jax = jax.jit(successive_approx_jax, static_argnums=(2,))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbef79a0",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -527,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a381a2b8",
+   "id": "6c1e9602",
    "metadata": {
     "hide-output": false
    },
@@ -537,17 +543,16 @@
     "\n",
     "def value_iteration(model, tol=1e-5):\n",
     "    constants, sizes, arrays = model\n",
-    "    _T = lambda v: T(v, constants, sizes, arrays)\n",
     "    vz = jnp.zeros(sizes)\n",
     "\n",
-    "    v_star = successive_approx(_T, vz, tolerance=tol)\n",
+    "    v_star = successive_approx_jax(vz, constants, sizes, arrays, tolerance=tol)\n",
     "    return get_greedy(v_star, constants, sizes, arrays)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "520ab386",
+   "id": "f8b307ba",
    "metadata": {
     "hide-output": false
    },
@@ -572,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bbe8dc0",
+   "id": "9b3c429f",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49b25110",
+   "id": "7b1c8a81",
    "metadata": {},
    "source": [
     "## Plots\n",
@@ -606,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c8db178",
+   "id": "2c0f47d8",
    "metadata": {
     "hide-output": false
    },
@@ -624,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ce7f459",
+   "id": "9de9c49d",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aefa6a1c",
+   "id": "7fa17510",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -653,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e34c0240",
+   "id": "de555a68",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5c752fc",
+   "id": "8b74ba39",
    "metadata": {
     "hide-output": false
    },
@@ -681,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f058c8f",
+   "id": "d352a8b6",
    "metadata": {
     "hide-output": false
    },
@@ -691,13 +696,13 @@
     "start_time = time.time()\n",
     "out = value_iteration(model)\n",
     "elapsed = time.time() - start_time\n",
-    "print(f\"VFI(jax not in succ) completed in {elapsed} seconds.\")"
+    "print(f\"VFI completed in {elapsed} seconds.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e108ca8a",
+   "id": "b62e97aa",
    "metadata": {
     "hide-output": false
    },
@@ -713,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e9d78b0",
+   "id": "90838a31",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d9c1531",
+   "id": "b8413934",
    "metadata": {
     "hide-output": false
    },
@@ -751,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99bae390",
+   "id": "f9b8790b",
    "metadata": {
     "hide-output": false
    },
@@ -769,7 +774,7 @@
   }
  ],
  "metadata": {
-  "date": 1703121772.914271,
+  "date": 1709332851.8359082,
   "filename": "opt_savings.md",
   "kernelspec": {
    "display_name": "Python",
