--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5fcb9d03",
+   "id": "fb4ee2b1",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6a6f752",
+   "id": "859e0a0b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d8ccf85",
+   "id": "8ba8699b",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcedcaf7",
+   "id": "87493713",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "170063b6",
+   "id": "61fee492",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c68ab7f8",
+   "id": "aa238ec2",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce7a7fd1",
+   "id": "8676dfa3",
    "metadata": {
     "hide-output": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c88903f",
+   "id": "3b7ddbb6",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca5f88ec",
+   "id": "8b11d657",
    "metadata": {
     "hide-output": false
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff9e1515",
+   "id": "58e2ae1e",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f988dc6",
+   "id": "4ac50fef",
    "metadata": {
     "hide-output": false
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b1ad668",
+   "id": "313d82a6",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13b2bcdd",
+   "id": "17cdf1e1",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37db5d99",
+   "id": "e28f6122",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cd41823",
+   "id": "41efe280",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918de203",
+   "id": "096eb11d",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdf96c1f",
+   "id": "2985f225",
    "metadata": {
     "hide-output": false
    },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3541196a",
+   "id": "b482d62e",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fef5e3a3",
+   "id": "689aacb2",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0eaad25",
+   "id": "befb3abf",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fb7190a",
+   "id": "0a0ce1f9",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b6ed770",
+   "id": "2c47a1ce",
    "metadata": {
     "hide-output": false
    },
@@ -644,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e3c0a9e",
+   "id": "65d7840e",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e999d52c",
+   "id": "c14934ed",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d87dee22",
+   "id": "43267607",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bec583db",
+   "id": "bc08303e",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "033d0cbc",
+   "id": "e0932601",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c6630b5",
+   "id": "48b8edaf",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d5d1654",
+   "id": "b35fcb6a",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee58d0c6",
+   "id": "884614e3",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2013ca29",
+   "id": "150b063c",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6298b8f",
+   "id": "94e4ee66",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "597e75ac",
+   "id": "f2531a9d",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cbeb8c5",
+   "id": "da24b643",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1990e055",
+   "id": "7e1c757a",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "707dd5e4",
+   "id": "539c342e",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8d69665",
+   "id": "f3732a35",
    "metadata": {
     "hide-output": false
    },
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "837b8ca1",
+   "id": "e0d6374f",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -872,7 +872,7 @@
   }
  ],
  "metadata": {
-  "date": 1703121772.4787598,
+  "date": 1709332851.483693,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
