--- a/troubleshooting.ipynb
+++ b/troubleshooting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6511f1ef",
+   "id": "9db09af8",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c22e92c6",
+   "id": "bd7a3965",
    "metadata": {},
    "source": [
     "# Troubleshooting"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44bb7626",
+   "id": "5881ec84",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b198b7e6",
+   "id": "eb3659b0",
    "metadata": {},
    "source": [
     "This page is for readers experiencing errors when running the code from the lectures."
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e5c5d30",
+   "id": "685e1ce7",
    "metadata": {},
    "source": [
     "## Fixing Your Local Environment\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2524eac1",
+   "id": "7b55c091",
    "metadata": {},
    "source": [
     "## Reporting an Issue\n",
@@ -98,7 +98,7 @@
   }
  ],
  "metadata": {
-  "date": 1703121772.964494,
+  "date": 1709332852.0499868,
   "filename": "troubleshooting.md",
   "kernelspec": {
    "display_name": "Python",
